Fix div and footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -64,10 +64,6 @@
 }
 #content {
   padding-top: 2em;
-  padding-bottom: 1em;
-}
-#intro, #skills, #education, #experience, #projects, #leadership, #volunteer, #birdz {
-  padding-bottom: 1em;
 }
 @media (max-width: 960px) {
   html, body {
